[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Time.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
use_filter = true
font_data = ExtResource( 1 )

[node name="Time" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.5
margin_right = 106.5
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Seconds" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "00s"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="times_up" from="." to="." method="_on_Time_times_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
